[package]
name = "superwhich"
description = "Cross-platform smart which alternative"
version = "1.1.0"
edition = "2021"
rust-version = "1.78"
homepage = "https://docs.rs/crate/superwhich/latest"
repository = "https://github.com/DarkCeptor44/superwhich"
readme = "README.md"
authors = ["DarkCeptor44"]
license = "GPL-3.0-or-later"
keywords = ["alternative", "command", "find", "which", "smart"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "^4", features = ["derive"] }
colored = "^2"
is_executable = "^1"
jaro_winkler = "^0.1"
rayon = "^1"

[[bin]]
name = "swhich"
path = "src/main.rs"
