[package]
name = "superwhich"
description = "Cross-platform smart which alternative"
version = "2.0.0"
edition = "2021"
rust-version = "1.80"
homepage = "https://docs.rs/crate/superwhich/latest"
repository = "https://github.com/DarkCeptor44/superwhich"
readme = "README.md"
authors = ["DarkCeptor44"]
license = "GPL-3.0-or-later"
keywords = ["alternative", "command", "find", "which", "smart"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "^1"
clap = { version = "^4", features = ["derive"] }
colored = "^3"
is_executable = "^1"
jaro_winkler = "^0.1"
rayon = "^1"

[dev-dependencies]
criterion = "^0.5"
tempfile = "^3"

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
incremental = true

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[[bin]]
name = "swhich"
path = "src/main.rs"

[[bench]]
name = "bench"
harness = false
